--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
 body{   
-    color:coral
+    color:#333;
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;   
+    margin: 0  auto;
+}
+#container h1{
+    font-size: 20px;
 }
